--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "birthday-records",
+  "homepage": "http://avj93.github.io/SimpleSortList",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,16 +16,18 @@
     "event-stream": "3.3.4"
   },
   "scripts": {
-    "prestart": "npm install",
     "start": "HOST=0.0.0.0 PORT=8000 ./node_modules/.bin/react-scripts start",
-    "pretest": "npm install",
-    "test": "rm -rf ./unit.xml; CI=true TEST_REPORT_FILENAME=./unit.xml ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit-reporter"
+    "test": "rm -rf ./unit.xml; CI=true TEST_REPORT_FILENAME=./unit.xml ./node_modules/.bin/react-scripts test --verbose --env=jsdom --testResultsProcessor ./node_modules/jest-junit-reporter",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "expect": "^21.2.1",
+    "gh-pages": "^3.2.3",
     "jest-junit-reporter": "^1.1.0",
     "react-test-renderer": "^16.2.0",
     "sinon": "^6.1.5"
